--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -16,7 +16,7 @@
             </label>
             <label index="flexform.title">Title</label>
             <label index="flexform.list">Mailjet contact list - Select a contact list where all new subscribers will be
-                added. You can create additional contact lists at Mailjet.
+                added. You can create additional contact lists in your Mailjet account.
             </label>
             <label index="flexform.prop">Contact properties - Select up to 3 contact properties to be shown in your
                 subscription form.
@@ -24,43 +24,44 @@
             <label index="flexform.prop1">Label for the first contact property in the form</label>
             <label index="flexform.prop2">Label for the second contact property in the form</label>
             <label index="flexform.prop3">Label for the third contact property in the form</label>
-            <label index="flexform.prop1desc">Description for the first contact property</label>
-            <label index="flexform.prop2desc">Description for the second contact property</label>
-            <label index="flexform.prop3desc">Description for the third contact property</label>
+            <label index="flexform.prop1desc">Description for the first contact property in the form</label>
+            <label index="flexform.prop2desc">Description for the second contact property in the form</label>
+            <label index="flexform.prop3desc">Description for the third contact property in the form</label>
             <label index="flexform.placeholder">example@domain.com</label>
             <label index="flexform.description">Form description</label>
             <label index="flexform.submitLabel">Submit Button Label</label>
             <label index="flexform.headingText">Email Heading Text</label>
-            <label index="flexform.bodyText">Email body text</label>
-            <label index="flexform.confButton">Email Confirmation Button Text- This is the text of the button inside the
+            <label index="flexform.bodyText">Email Body Text</label>
+            <label index="flexform.confButton">Email Confirmation Button Text - This is the text of the button inside the
                 subscription confirmation email.
             </label>
-            <label index="flexform.emailFooterMail">Email footer text</label>
-            <label index="flexform.thanks">Thanks, ....</label>
+            <label index="flexform.emailFooterMail">Email Footer Text</label>
+            <label index="flexform.thanks">Thanks,</label>
             <label index="flexform.owner">Owner - Site owner name, shown at the end of the subscription confirmation
                 email.
             </label>
             <label index="flexform.confMessage">Confirmation Message - Default: Subscription confirmation email sent to
                 %email. Please check your inbox and confirm the subscription. (Note: The '%email' symbol will be
-                replaced by the email of the current user.)
+                replaced by the email address of the subscriber)
             </label>
-            <label index="flexform.dataTypeMessage">Data type mismatch - Please enter the correct values according to
-                the example of the description in the field: %id -> The %id symbol will be replaced by the name of
-                property and the %type symbol replace a type of data in property/field.
+            <label index="flexform.dataTypeMessage">Data type mismatch - Default: Please enter the correct values according to
+                the example of the description in the field: %id. (Note: The %id symbol will be replaced by the name of
+                field and the %type symbol will be replaced by the type of data required by the field)
             </label>
             <label index="flexform.subscribeError">Subscribe error. Please try again later! - This message will appear
-                in case an error occured during subscription form submission.
+                in case an error occurs during subscription form submission.
             </label>
             <label index="flexform.memberExist">The contact %email is already subscribed - This message will appear when
-                the subscriber already exists in your Mailjet contact list. The %email symbol will be replaced by the email
-                address of the subscriber.
+                the subscriber already exists in your Mailjet contact list. (Note: The %email symbol will be replaced by the email
+                address of the subscriber)
             </label>
-            <label index="flexform.finalMessage">"Thanks for subscribing... " message - This message will appear when
+            <label index="flexform.finalMessage">Thanks for subscribing - This message will appear when
                 the subscriber is successfully added to the contact list.
             </label>
-            <label index="flexform.email">Label for email field</label>
-            <label index="flexform.emailSender">Email FROM address - this is required field! This is email from address
-                for confirmation email! If the field is empty when user sumbit a form will throw a error!
+            <label index="flexform.email">Email field label</label>
+            <label index="flexform.emailSender">* Email FROM address - this is a required field! This is the email address used to send 
+                the confirmation email to the subscriber! Use one of your validated sender email addresses from your Mailjet account. 
+                If the field is empty the subscriber will not receive the confirmation email and will not be able to subscribe!
             </label>
             <!-- Frontend -->
             <label index="field.email">Email</label>
@@ -68,12 +69,12 @@
             <label index="field.lastName">Last name</label>
             <label index="field.email">Email</label>
             <label index="field.interests">Interests</label>
-            <label index="error.memberExists">You are already registered with this email address!</label>
+            <label index="error.memberExists">This email address is already subscribed!</label>
             <label index="error.general">A general error occurred, sorry!</label>
             <label index="error.form.email.1221560718">Please provide an email address!</label>
             <label index="error.form.email.1221559976">The provided email address is invalid!</label>
             <label index="success.title">You have successfully registered!</label>
-            <label index="success.description">Please check your emails to activate the registration!</label>
+            <label index="success.description">Please check your inbox to confirm your subscription!</label>
             <label index="form.submit">Submit</label>
             <label index="memberCount">Count of members</label>
         </languageKey>
